--- a/detect-water-and-notify.yaml
+++ b/detect-water-and-notify.yaml
@@ -1,26 +1,24 @@
 blueprint:
-  name: Detect water and notify
-  description: detect  'moisture' device-class and if so execute an action.
+  name: Moisture Sensor
+  description: Perform action when moisture sensor turns wet
   domain: automation
   input:
     actions:
       name: Actions
-      description: Notifications or similar to be run. {{sensors}} is replaced with the names of sensors.
+      description: Notifications or similar to be run.
+        {{ trigger.event.data.new_state.attributes.friendly_name }} will be the name of the
+        sensor
       selector:
         action: {}
-variables:
-  sensors: >-
-    {% set result = namespace(sensors=[]) %}
-    {% for state in states.sensor | selectattr('attributes.device_class', '==', 'moisture') %}
-        {% set result.sensors = result.sensors + [state.name ~ ' (' ~ state.state ~ ' %)'] %}
-    {% endfor %}
-    {% for state in states.binary_sensor | selectattr('attributes.device_class', '==', 'moisture') | selectattr('state', '==', 'on') %}
-       {% set result.sensors = result.sensors + [state.name] %}
-    {% endfor %}
-    {{result.sensors|join(', ')}}
 trigger:
-  - type: moist
-    platform: device
+  - event_data: {}
+    event_type: state_changed
+    platform: event
+condition:
+  - condition: template
+    value_template: '{{ trigger.event.data.new_state.attributes.device_class == "moisture" }}'
+  - condition: template
+    value_template: '{{ trigger.event.data.new_state.state == "on" }}'
 action:
 - choose: []
   default: !input 'actions'
